@@ -1,0 +1,9 @@
+
+We would like to send a big "THANK YOU" to
+Martin Smallridge <info@snailsource.com> for let us use his
+phpBB2 Gallery integration mod.
+Maybe you visit his site at http://www.snailsource.com
+
+For the Gallery Team,
+
+Jens Tkotz, 2004
